# Workspace

./: .checkpoint  .env.docker  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .talismanrc  251218-worklog.md  BUILD_ISSUE.md  BUN-4_Implementation_Plan_v2.md  CHECKPOINT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.osrs  Dockerfile.runpod  E2E-TEST-STATUS.md  ENTITY_MAPPING_FASFFY.md  ENTITY_MAPPING_SHARED_SUBREDDITS_SUMMARY.md  GRAPHQL_CODEGEN.md  GRIDSTACK_QUICK_REFERENCE.md  HACKATHON.md  HISTORY.md  Justfile  PERFORMANCE.md  QUICKSTART-E2E-TESTS.md  README.md  REFACTORING_PLAN.md  RISK_REGISTRY.md  RUNPOD_DEPLOYMENT.md  RUNPOD_TROUBLESHOOTING.md  TEST-EXECUTION-SUMMARY.md  TODO.md  TODO_INFRA.md  TUMBLR_EXAMPLES_GUIDE.md  WARP.md  add_url_to_crawl.py  batch_test_images.py  benchmark_comfy_agent.py  bun.lockb  (+75 more)
agents/antom-payment/: .env.example  README.md  pyproject.toml
agents/antom-payment/antom-payemnt-agent/: agent.py
agents/bidi-demo/: README.md  pyproject.toml
agents/bidi-demo/app/: main.py
agents/bidi-demo/tests/: test_bidi_demo.md  test_bidi_demo_e2e.md
agents/blog-writer/: .gitignore  README.md  agent_explainer.md  pyproject.toml
agents/blog-writer/blogger_agent/: __init__.py  agent.py  agent_utils.py  config.py  tools.py  validation_checkers.py
agents/blog-writer/eval/: README.md  test_eval.py
agents/blog-writer/tests/: README.md  test_agent.py
agents/brand-search-optimization/: README.md  customization.md  env.example  pyproject.toml
agents/brand-search-optimization/brand_search_optimization/: agent.py  prompt.py
agents/brand-search-optimization/deployment/: bq_data_setup.sql  bq_populate_data.py  deploy.py  eval.sh  run.sh  test.sh
agents/brand-search-optimization/eval/: test_eval.py
agents/brand-search-optimization/tests/: example_interaction.md
agents/camel/: .env.example  README.md  pyproject.toml
agents/camel/camel/: agent.py
agents/currency-agent/: .env.example  README.md  pyproject.toml
agents/currency-agent/currency_agent/: agent.py  test_client.py
agents/currency-agent/mcp-server/: pyproject.toml  server.py  test_server.py
agents/customer-service/: .gitignore  README.md  pyproject.toml
agents/customer-service/customer_service/: __init__.py  agent.py  config.py  prompts.py
agents/customer-service/deployment/: deploy.py
agents/customer-service/eval/: test_eval.py
agents/data-engineering/: .env.example  README.md  pyproject.toml
agents/data-engineering/data_engineering_agent/: .env.example  __init__.py  agent.py  config.py
agents/data-engineering/deployment/: deploy.py  test_deployment.py
agents/data-engineering/eval/: test_eval.py
agents/data-engineering/tests/: test_agents.py
agents/fomc-research/: .env-example  README.md  pyproject.toml
agents/fomc-research/deployment/: bigquery_setup.py  deploy.py  sample_timeseries_data.csv  test_deployment.py
agents/fomc-research/fomc_research/: __init__.py  agent.py  root_agent_prompt.py
agents/google-trends-agent/: README.md  pyproject.toml
agents/google-trends-agent/deployment/: deploy.py  test_deployment.py
agents/google-trends-agent/google_trends_agent/: .env.example  agent.py  prompt.py  tools.py
agents/image-scoring/: .env.example  README.md  pyproject.toml
agents/image-scoring/eval/: test_eval.py
agents/image-scoring/image_scoring/: agent.py  checker_agent.py  config.py  policy.json  prompt.py
agents/machine-learning-engineering/: .env.example  README.md  pyproject.toml
agents/machine-learning-engineering/deployment/: deploy.py  test_deployment.py
agents/machine-learning-engineering/machine_learning_engineering/: __init__.py  agent.py  prompt.py
agents/machine-learning-engineering/tests/: test_agents.py
agents/medical-pre-authorization/: .env.example  .gitignore  README.md  pyproject.toml
agents/medical-pre-authorization/deployment/: deploy.py  test_deployment.py
agents/medical-pre-authorization/eval/: test_eval.py
agents/medical-pre-authorization/medical_pre_authorization/: __init__.py  agent.py  prompt.py
agents/medical-pre-authorization/tests/: test_agents.py
agents/personalized-shopping/: .env.example  README.md  pyproject.toml
agents/personalized-shopping/deployment/: deploy.py
agents/personalized-shopping/eval/: test_eval.py
agents/personalized-shopping/personalized_shopping/: __init__.py  agent.py  prompt.py
agents/personalized-shopping/tests/: test_tools.py
agents/plumber-data-engineering-assistant/: .gitignore  README.md  pyproject.toml
agents/plumber-data-engineering-assistant/plumber_agent/: __init__.py  agent.py  constants.py  prompts.py
agents/podcast_transcript_agent/: README.md  pyproject.toml
agents/podcast_transcript_agent/podcast_transcript_agent/: agent.py
agents/podcast_transcript_agent/tests/: run_with_pdf.sh  run_with_txt.sh  test_agents.py
agents/product-catalog-ad-generation/: .env.example  LICENSE  README.md  agent_engine_deploy.py  pyproject.toml
agents/product-catalog-ad-generation/content_gen_agent/: agent.py
agents/realtime-conversational-agent/server/: main.py  pyproject.toml
agents/short-movie-agents/: .env-template  .gitignore  Changelog.md  Dockerfile  GEMINI.md  Makefile  README.md  pyproject.toml
agents/short-movie-agents/app/: __init__.py  agent.py  screenplay_agent.py  server.py  story_agent.py  (+2 more)
agents/software-bug-assistant/: Dockerfile  README.md  pyproject.toml
agents/swe-benchmark-agent/: README.md  pyproject.toml
agents/travel-concierge/: .env.example  README.md  pyproject.toml
lib/asr/: pyproject.toml
lib/runpod/: pyproject.toml
lib/translation/: pyproject.toml
notebooks/jupyter/: .devenv.flake.nix  .gitignore  CLAUDE.md  Caddyfile  Dockerfile.minimal  cache_update.json  check_crawler.sh  comprehensive_ui_ux_mock_reddit_data.json  contributing.md  devenv.nix  docker-compose.mysql.yml  docker-compose.yml  emergency_cleanup.sh  flake.nix  imageboard_monitor_worker.py.backup3  monsters.json  pyproject.toml  requirements-otel.txt  setup_talisman.sh
src/agents/: pyproject.toml
src/discord-bot/: pyproject.toml
(+3623 files in other folders)
