[project]
name = "medical-pre-authorization"
version = "0.1.0"
description = ""
authors = [
    {name = "Dipali Agarwal", email = "agarwaldipali@google.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "google-adk>=1.13.0,<2.0.0",
    "google-genai>=1.32.0,<2.0.0",
    "google-cloud>=0.34.0,<0.35.0",
    "pdfplumber>=0.11.7,<0.12.0",
    "google-cloud-aiplatform>=1.111.0,<2.0.0",
    "reportlab>=4.4.3,<5.0.0",
    "google-cloud-storage>=2.19.0",
    "pymupdf>=1.26.4,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "google-cloud-aiplatform[adk,agent-engines,evaluation]>=1.93.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "google-adk[eval]>=1.5.0",
]
deployment = [
    "absl-py>=2.2.1",
]

# The build system is updated to use hatchling, a standard build backend.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
