[project]
name = "podcast-transcript-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "google-adk>=1.14.1",
    "google-generativeai>=0.8.5",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.36.0",
]
