[project]
name = "asr"
version = "0.1.0"
description = "ASR backend adapters (Parakeet/NeMo, Whisper)"
requires-python = ">=3.11"
dependencies = [
    "cloudpickle>=3.1.2",
    "faster-whisper>=1.2.1",
    "fiddle>=0.3.0",
    "hydra-core>=1.3.2",
    "nemo-toolkit[asr]>=2.7.0",
    "pytorch-lightning>=2.6.1",
]

[tool.setuptools]
packages = ["asr", "asr.adapters"]

[tool.setuptools.package-dir]
"asr" = "."
