[project]
name = "runpod-lib"
version = "0.1.0"
requires-python = ">=3.11"
description = "RunPod cloud GPU management library"
dependencies = [
    "runpod>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"