[project]
name = "discord-bot"
version = "0.2.0"
description = "Maya Discord orchestrator — Discord-First ChatOps for agent runtime"
requires-python = ">=3.11"
dependencies = [
    "agents",
    "discord.py>=2.4.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9",
    "pomice>=2.8.5",
    "PyNaCl>=1.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
maya-bot = "bot.main:main"

[tool.uv.sources]
agents = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["bot"]
